--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="half-width">
             <h1 style="color: orangered;">DREAM BIG</h1>
-            <h3>Become A WEB-DEVELOPER</h3>git 
+            <h3>Become A WEB-DEVELOPER</h3>
             <p style="padding-right: 50px;">I already learned the basic HTML and CSS. I can build any simple website. I want to learn more and more.</p>
             <a class="link-button" target="_blank" href="" >Download Resume</a>
         </div>
